# MuFun

./:  data_preparation_example.ipynb  .gitignore  README.md  pyproject.toml
demo/mufun_acestep/: gr_app.py
scripts/: finetune.sh  grpo.sh  tp.json  train_scratch.sh  trainfull_qwen.sh  warmup_qwen.sh  z2.json  z3.json
tinyllava/data/: dataset.py  dataset_rl.py  image_preprocess.py
tinyllava/data/template/: base.py  gemma_template.py  llama_template.py  phi_template.py  pretrain_template.py  qwen2_base_template.py  qwen2_instruct_template.py
tinyllava/model/: load_model.py  modeling_tinyllava.py
tinyllava/model/connector/: blp.py  slp.py  xlp.py
tinyllava/model/vision_tower/: whisper.py  wpm.py
tinyllava/train/: tinyllava_trainer.py  train.py  train_grpo.py
tinyllava/training_recipe/: base.py
tinyllava/utils/: arguments.py  constants.py  message.py
trl-main/trl/trainer/: grpo_trainer.py
